--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  sqflite: ^1.1.7+3
+  shared_preferences: ^0.5.4+6
+  fluttertoast: ^3.1.0
+  dio: 2.1.0
+  provider: ^3.0.0+1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^1.7.1
+  json_serializable: ^3.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
