发现一个有点纠结的地方：baseStatefulView框架好像不支持AutomaticKeepAliveClientMixin，换成原生就正常了…… 底部navigationBar和基本pageView完成

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   fluttertoast: ^3.1.0
   dio: 2.1.0
   provider: ^3.0.0+1
-
+  rxdart: ^0.22.6
 
 dev_dependencies:
   flutter_test:
@@ -79,3 +79,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - imgs/
+    - imgs/icon/
