--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   dio: 2.1.0
   provider: ^3.0.0+1
   rxdart: ^0.22.6
+  video_player: ^0.10.5+2
 
 dev_dependencies:
   flutter_test:
@@ -82,3 +83,4 @@ flutter:
   assets:
     - imgs/
     - imgs/icon/
+    - imgs/avatar/
