--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^3.0.0+1
   rxdart: ^0.22.6
   video_player: ^0.10.5+2
+  simple_animations : 1.3.4
 
 dev_dependencies:
   flutter_test:
