--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   rxdart: ^0.22.6
   video_player: ^0.10.5+2
   simple_animations : 1.3.4
+  flutter_staggered_grid_view: ^0.3.0
 
 dev_dependencies:
   flutter_test:
